--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+server.port=8080
+#spring.mvc.static-path-pattern=/**
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
 mybatis.mapper-locations=classpath:mapper/*.xml
 spring.datasource.name=miaosha
 spring.datasource.url=jdbc:mysql://localhost:3306/miaosha?useUnicode=true&useSSL=false&serverTimezone=UTC
@@ -6,3 +14,4 @@ spring.datasource.password=123456
 #Druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mvc.static-path-pattern=
